--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ html, body {
 	margin:0 !important;
 	padding-left: 10px !important;
 }
+.navbar-light .navbar-toggler {
+    border: 0px;
+}
 .navbar-toggler:focus, .navbar-toggler:active, .navbar-toggler {
     outline: none;
     box-shadow: none;
