--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ footer {
     float: left;
     width: 50%;
     min-height: 100%;
+    font-family: 'Playfair Display', serif;
 
 }
 h1 {
@@ -83,6 +84,9 @@ h2 {
 .py-3 {padding: 30px 0;}
 
 /*Kontakt form*/
+#contact-form {
+    font-family: 'Playfair Display', serif;
+}
 #contact-form .form-group {
     margin-bottom: 20px;
 }
@@ -124,4 +128,16 @@ h2 {
     h1 {
         text-align: center;
     }
+}
+/*Kontakt informacije*/
+#contact-info a {
+    outline: none;
+    color:gray;
+
+}
+#contact-info .col-sm {
+    text-align: center;
+}
+#contact-info {
+    padding: 100px;
 }
