Dodala sam nove fotografije i napravila galeriju

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,8 @@ h2 {
 
 /*Kontakt form*/
 #contact-form {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Kaisei Tokumin', serif;
+font-family: 'Lora', serif;
 }
 #contact-form .form-group {
     margin-bottom: 20px;
